# LitCoach

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  LICENSE  README.md  background.js  components.json  contentScript.js  eslint.config.js  features.txt  index.html  injectScript.js  jsconfig.json  llm_code_eval.txt  manifest.json  package-lock.json  package.json  popup.css  popup.html  popup.js  privacy-policy.md  pyproject.toml  sidebar.css  tailwind.config.js  tasks.txt  vercel.json  vite.config.js
api/: app.py  config.py  help_prompt.txt  main.py  openai_utils.py  prompts.yaml  pyproject.toml  requirements.txt  system_prompt.txt  test.ipynb  test.py  utils.py  vercel.json
api/ai_client/: __init__.py  ai_client.py
api/db/: __init__.py  database.py  mongo.py
api/github/: __init__.py  auth_callback.py  create_repo.py  does_repo_exist.py  github.py  push_file.py  user_info.py  user_repos.py
api/models/: __init__.py  ai_assistance.py  ai_help.py  create_repo.py  github_access_token_request.py  github_code.py  leetcode.py  leetcode_problem.py  leetcode_submission.py  problem.py  register_user.py  stripe_requests.py  usage.py  user.py
api/openai_utilities/: __init__.py  help_prompt.txt  open_api_wrapper.py
api/payment/: __init__.py  payment.py
api/routes/: __init__.py  access_token.py  ai_assistance.py  ai_help.py  ai_response.py  auth.py  callback.py  create_repo.py  github_access_token.py  github_auth.py  github_user_info.py  leetcode_push.py  leetcode_submission.py  (+26 more)
public/: manifest.json
src/: App.jsx  GetAIHelp.js  background.js  main.jsx
(+61 files in other folders)
